--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -202,6 +202,9 @@
         padding-top: 35px;
         // box-shadow: 0 -2px 15px white;
         // box-shadow: 0 -45px 55px black;
+        & h2:first-child{
+            margin-top: 0;
+        }
 
         p{
             margin-bottom: 15px;
