--- a/src/assets/styles/shop.scss
+++ b/src/assets/styles/shop.scss
@@ -279,63 +279,6 @@
     }
 }
 
-.shopPagination{
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    .shopPagination__item{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 40px;
-        height: 40px;
-        border: 1px solid #8f8f8f;
-        color: #0a0a0a;
-        text-decoration: none;
-        cursor: pointer;
-        transition: .4s;
-
-        &:not(.shopPagination__prev,.shopPagination__next,.current){
-            &:hover{
-                // border: 1px solid #aaaaaa;
-                // background: #8f8f8f;
-                // color: white;
-                box-shadow: 0px 0px 3px 1px #6b6b6b;
-            }
-        }
-
-        &.current{
-            background: #7e75ff;
-            color: white;
-        }
-        &.shopPagination__prev{
-            border: none;
-            transform: scale(-1) translateX(0);
-            background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Next_right_arrow_black_outline.svg/640px-Next_right_arrow_black_outline.svg.png) no-repeat center / contain;
-            &:hover{
-                transform: scale(-1) translateX(5px);
-            }
-        }
-        &.shopPagination__next{
-            border: none;
-            background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/Next_right_arrow_black_outline.svg/640px-Next_right_arrow_black_outline.svg.png) no-repeat center / contain;
-            transform: translateX(0);
-            &:hover{
-                transform: translateX(5px);
-            }
-        }
-        &.shopPagination__next,&.shopPagination__prev{
-            opacity: 0;
-            pointer-events: none;
-            &.visible{
-                opacity: 1;
-                pointer-events: all;
-            }
-        }
-    }
-}
-
 .confirm{
     // min-height: 80vh;
     .confirmWrap{
@@ -657,6 +600,7 @@
             &.imageMobile{
                 // margin-top: 15px;
                 display: inherit;
+                margin-bottom: 25px;
             }
             &.imageDesktop{
                 display: none;
