og + back styles

--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -67,7 +67,7 @@
         align-self: flex-start;
         padding: 5px 10px;
         border-radius: 10px;
-        background: #0C596E;
+        background: rgb(24, 191, 238);
         margin: 5px 0;
         color: white;
     }
